# asteria

./: Cargo.toml  README.md  client.toml.example
.github/: copilot-instructions.md
.github/workflows/: publish.yml
asteria-client/: Cargo.toml
asteria-client/src/: input.rs  keys.rs  main.rs  network.rs
asteria-core/: Cargo.toml
asteria-core/src/: config.rs  lib.rs  logging.rs  protocol.rs
asteria-server/: Cargo.toml
asteria-server/src/: input_simulator.rs  main.rs  server.rs
