[workspace]
package.edition = "2024"
resolver = "3"
members = ["asteria-core", "asteria-client", "asteria-server"]

[workspace.dependencies]
asteria-core = { path = "asteria-core" }
asteria-client = { path = "asteria-client" }
asteria-server = { path = "asteria-server" }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
dirs = "6.0.0"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = "4.5.40"
