[package]
name = "asteria-server"
version = "1.2.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
asteria-core = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
enigo = { workspace = true }
bincode = { workspace = true }
